2014-03-03  Jakub Jelinek  <jakub@redhat.com>

	PR objc++/60398
	* obj-c++.dg/invalid-method-2.mm: Adjust dg-error regexps.

	* c-c++-common/cilk-plus/PS/vectorlength-2.c: New test.
	* c-c++-common/cilk-plus/PS/vectorlength-3.c: New test.

2014-03-02  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60150
	* g++.dg/lto/pr60150.H: New testcase.
	* g++.dg/lto/pr60150_0.C: New testcase.
	* g++.dg/lto/pr60150_1.C: New testcase.

2014-03-02  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/60306
	* testsuite/g++.dg/ipa/devirt-29.C: New testcase

2014-03-02  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR fortran/60236
	* gfortran.dg/vect/pr32380.f: Fix expected test results.

2014-03-01  Edward Smith-Rowland  <3dw4rd@verizon.net>

	PR c++/50025
	* g++.dg/cpp0x/pr50025.C: New.

2014-03-01  Adam Butcher  <adam@jessamine.co.uk>

	PR c++/60377
	* g++.dg/cpp1y/pr60377.C: New testcase.

2014-03-01  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/60341
	* gfortran.dg/str_comp_optimize_1.f90: New test.

2014-03-01  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/60071
	* gcc.c-torture/compile/pr60071.c: New.

2014-02-28  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/60359
	* gfortran.dg/unlimited_polymorphic_16.f90: New.

2014-02-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58610
	* g++.dg/cpp0x/constexpr-ice11.C: New.

2014-02-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60314
	* g++.dg/cpp1y/auto-fn24.C: New.

2014-02-28  Joey Ye  <joey.ye@arm.com>

	PR target/PR60169
	* gcc.target/arm/thumb1-far-jump-3.c: New case.

2014-02-27  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60253
	* g++.dg/overload/ellipsis2.C: New.

2014-02-27  Jeff Law  <law@redhat.com>

	PR rtl-optimization/52714
	* gcc.c-torture/compile/pr52714.c: New test.

2014-02-27  Mikael Pettersson  <mikpe@it.uu.se>
            Jeff Law  <law@redhat.com>

	 PR rtl-optimization/49847
	 * g++.dg/pr49847.C: New test.

2014-02-27  Marek Polacek  <polacek@redhat.com>

	PR middle-end/59223