@@ -1,5 +1,10 @@
 2014-03-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR preprocessor/60400
+	* c-c++-common/cpp/pr60400.c: New test.
+	* c-c++-common/cpp/pr60400-1.h: New file.
+	* c-c++-common/cpp/pr60400-2.h: New file.
+
 	PR objc++/60398
 	* obj-c++.dg/invalid-method-2.mm: Adjust dg-error regexps.
 
